<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5_gripper_bringup</name>
  <version>1.0.0</version>
  <description>
     Bringup package for the UR5 with attached gripper
  </description>
  <maintainer email="todo@mail.to">Ermano Arruda</maintainer>

  <license>BSD</license>

  <author email="toto@mail.to">Ermano Arruda</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>ur_robot_driver</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ur5_robotiq2f140_gripper_description</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
